--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <div class="logo-container">
-        <img src="logo.svg" alt="Auravia Ltd Logo" class="logo">
+        <img src="auravia-logo-white.png" alt="Auravia Ltd Logo" class="logo">
     </div>
 </body>
 </html>
